--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
 
         .hero-screenshot {
-            margin-bottom: 100px;
+            margin-bottom: 80px;
             perspective: 1000px;
         }
 
@@ -85,7 +85,7 @@
             box-shadow: 0 30px 60px rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.05);
             display: block;
             margin: 0 auto;
-            transition: transform 0.5s ease;
+            transition: transform 0.1s ease-out;
         }
 
         /* Brew Section */
@@ -94,7 +94,7 @@
             backdrop-filter: blur(20px);
             border-radius: 32px;
             padding: 48px;
-            margin-bottom: 120px;
+            margin-bottom: 100px;
             border: 1px solid rgba(134, 134, 139, 0.1);
         }
 
@@ -181,13 +181,21 @@
         }
 
         .btn {
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
             text-decoration: none;
             padding: 14px 32px;
             border-radius: 980px;
             font-weight: 600;
             font-size: 17px;
             transition: all 0.2s ease;
+        }
+
+        .btn svg {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
         }
 
         @media (max-width: 800px) {
@@ -204,14 +212,16 @@
             <h1>AppCmd</h1>
             <p class="tagline">The fastest way to switch application windows on macOS :)</p>
             <div style="display: flex; gap: 16px; justify-content: center; margin-top: 32px;">
-                <a href="#install" class="btn" style="background: var(--accent); color: white;">🍺 Install via Brew</a>
-                <a href="https://github.com/clearnote01/appcmd" class="btn" style="background: var(--card-bg); color: var(--text); border: 1px solid rgba(134, 134, 139, 0.2);">🐙 View on GitHub</a>
+                <a href="#install" class="btn" style="background: var(--accent); color: white;">
+                    <svg viewBox="0 0 24 24"><path d="M18.66 12.01c.01.21.03.41.03.61 0 4.1-3.32 7.42-7.42 7.42-4.1 0-7.42-3.32-7.42-7.42 0-3.69 2.69-6.73 6.17-7.3 1-.16 2.01-.16 2.92.01l1.41-1.41C13.23 3.4 11.75 3.27 10.3 3.5c-4.8.78-8.52 4.96-8.52 10.03 0 5.6 4.54 10.14 10.14 10.14s10.14-4.54 10.14-10.14c0-.52-.04-1.04-.13-1.54l-1.27.02zm-1.12-6.52l-1.42 1.42c.42.36.78.78 1.07 1.25l1.46-.84a8.1 8.1 0 0 0-1.11-1.83zM15.11 3.5c-.86-.28-1.78-.44-2.73-.44-.31 0-.61.02-.91.06L12.9 4.55c.57-.14 1.16-.21 1.77-.21.15 0 .31.01.46.02l-.02-1.06zM22.51 9.49l-1.44.52c.16.51.26 1.05.29 1.6l1.27-.02c-.04-.84-.2-1.64-.46-2.4l.34.3zm-3.41-5.11a9.92 9.92 0 0 0-3.23-2.07l-.4 1.22a8.67 8.67 0 0 1 2.82 1.81l.81-.96z"/></svg>
+                    Install via Brew
+                </a>
+                <a href="https://github.com/clearnote01/appcmd" class="btn" style="background: var(--card-bg); color: var(--text); border: 1px solid rgba(134, 134, 139, 0.2);">
+                    <svg viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.43.372.82 1.102.82 2.222 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+                    View on GitHub
+                </a>
             </div>
         </header>
-
-        <section class="hero-screenshot">
-            <img src="./assets/overlay.png" alt="AppCmd Overlay" class="main-overlay-img" id="hero-img">
-        </section>
 
         <section id="install" class="install-box">
             <h2>Quick Installation</h2>
@@ -223,25 +233,29 @@ brew services start appcmd</code-block>
             </div>
         </section>
 
-        <!-- Feature 1: Cheat Sheet -->
+        <section class="hero-screenshot">
+            <img src="./assets/overlay.png" alt="AppCmd Overlay" class="main-overlay-img" id="hero-img">
+        </section>
+
+        <!-- Feature 1: Dynamic Cycling (Previously Muscle Memory) -->
         <section class="feature-row">
             <div class="feature-text">
-                <h3>📜 Visual Cheat Sheet</h3>
-                <p>Can't remember your shortcuts? Just hold the Right Command key for a moment to reveal all your custom assignments in an elegant grid.</p>
+                <h3>🔄 Instant Cycling</h3>
+                <p>Have multiple apps starting with 'S'? Just keep holding the Command key and tap 'S' again to cycle through Safari, Slack, and Spotify instantly.</p>
             </div>
             <div class="feature-image">
-                <img src="./assets/cheatsheet.png" alt="Cheat Sheet" class="small-screenshot">
+                <img src="./assets/overlay.png" alt="App Cycling" class="small-screenshot">
             </div>
         </section>
 
-        <!-- Feature 2: Static Mapping -->
+        <!-- Feature 2: Cheat Sheet -->
         <section class="feature-row reverse">
             <div class="feature-text">
-                <h3>🎯 Muscle Memory</h3>
-                <p>Assign 'A' to Arc, 'S' to Safari, or 'O' for Outlook. Your most important apps are always exactly one key away.</p>
+                <h3>📜 Visual Cheat Sheet</h3>
+                <p>Can't remember your shortcuts? Hold the Right Command key for a moment to reveal all your custom assignments in an elegant, translucent grid.</p>
             </div>
             <div class="feature-image">
-                <img src="./assets/settings.png" alt="Settings" class="small-screenshot">
+                <img src="./assets/cheatsheet.png" alt="Cheat Sheet" class="small-screenshot">
             </div>
         </section>
 
@@ -249,10 +263,10 @@ brew services start appcmd</code-block>
         <section class="feature-row">
             <div class="feature-text">
                 <h3>🎨 Modern Aesthetics</h3>
-                <p>Designed to feel like a native part of macOS. Translucent materials, smooth animations, and zero configuration required to start.</p>
+                <p>Designed to feel like a native part of macOS. Translucent materials, smooth animations, and a focus on speed above all else.</p>
             </div>
             <div class="feature-image">
-                <img src="./assets/menubar.png" alt="Menu Bar" class="small-screenshot">
+                <img src="./assets/settings.png" alt="Settings & Menu Bar" class="small-screenshot">
             </div>
         </section>
 
@@ -276,13 +290,14 @@ brew services start appcmd</code-block>
             });
         }
 
-        // Simple tilt effect for hero
         const hero = document.getElementById('hero-img');
-        document.addEventListener('mousemove', (e) => {
-            const x = (window.innerWidth / 2 - e.pageX) / 50;
-            const y = (window.innerHeight / 2 - e.pageY) / 50;
-            hero.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
-        });
+        if (hero) {
+            document.addEventListener('mousemove', (e) => {
+                const x = (window.innerWidth / 2 - e.pageX) / 60;
+                const y = (window.innerHeight / 2 - e.pageY) / 60;
+                hero.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
+            });
+        }
     </script>
 </body>
 </html>
