Update cycling section to use new screenshot placeholder

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ brew services start appcmd</code-block>
                     <p>Hold the Right Command key and press a letter to switch to apps starting with that letter. Tap the key again to cycle through multiple matches.</p>
                 </div>
                 <div class="feature-image">
-                    <img src="./assets/overlay.png" alt="App Switching" class="screenshot">
+                    <img src="./assets/overlay.png" alt="App Switching" class="screenshot" src="./assets/cycling.png">
                 </div>
             </div>
         </section>
