Update showcase with accessibility section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,17 @@
 brew install appcmd
 brew services start appcmd</code-block>
             </div>
-        </section>
+        <section class="feature-section"> 
+            <div class="feature-grid"> 
+                <div class="feature-text"> 
+                    <h2>Accessibility Permissions</h2> 
+                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
+                </div> 
+                <div class="feature-image"> 
+                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
+                </div> 
+            </div> 
+        </section>        </section>
 
         <img src="./assets/overlay.png" alt="AppCmd Overlay" class="main-overlay-img">
 
@@ -224,7 +234,17 @@ brew services start appcmd</code-block>
                     <img src="./assets/cycling.png" alt="App Switching" class="screenshot">
                 </div>
             </div>
-        </section>
+        <section class="feature-section"> 
+            <div class="feature-grid"> 
+                <div class="feature-text"> 
+                    <h2>Accessibility Permissions</h2> 
+                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
+                </div> 
+                <div class="feature-image"> 
+                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
+                </div> 
+            </div> 
+        </section>        </section>
 
         <section class="feature-section reverse">
             <div class="feature-grid">
@@ -236,7 +256,17 @@ brew services start appcmd</code-block>
                     <img src="./assets/settings.png" alt="Settings" class="screenshot">
                 </div>
             </div>
-        </section>
+        <section class="feature-section"> 
+            <div class="feature-grid"> 
+                <div class="feature-text"> 
+                    <h2>Accessibility Permissions</h2> 
+                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
+                </div> 
+                <div class="feature-image"> 
+                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
+                </div> 
+            </div> 
+        </section>        </section>
 
         <section class="feature-section">
             <div class="feature-grid">
@@ -248,7 +278,17 @@ brew services start appcmd</code-block>
                     <img src="./assets/cheatsheet.png" alt="Cheat Sheet" class="screenshot">
                 </div>
             </div>
-        </section>
+        <section class="feature-section"> 
+            <div class="feature-grid"> 
+                <div class="feature-text"> 
+                    <h2>Accessibility Permissions</h2> 
+                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
+                </div> 
+                <div class="feature-image"> 
+                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
+                </div> 
+            </div> 
+        </section>        </section>
 
         <footer>
             <p>v1.1.2 • Crafted with ✨ by <a href="https://github.com/clearnote01" style="color: inherit;">Utkarsh Raj</a></p>
