Fix duplicate accessibility sections and update version footer

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             background-color: var(--card-bg);
             border-radius: 20px;
             padding: 40px;
-            margin-bottom: 100px;
+            margin-bottom: 60px;
         }
 
         .install-box h2 {
@@ -210,17 +210,19 @@
 brew install appcmd
 brew services start appcmd</code-block>
             </div>
-        <section class="feature-section"> 
-            <div class="feature-grid"> 
-                <div class="feature-text"> 
-                    <h2>Accessibility Permissions</h2> 
-                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
-                </div> 
-                <div class="feature-image"> 
-                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
-                </div> 
-            </div> 
-        </section>        </section>
+        </section>
+
+        <section class="feature-section">
+            <div class="feature-grid">
+                <div class="feature-text">
+                    <h2>Accessibility Permissions</h2>
+                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p>
+                </div>
+                <div class="feature-image">
+                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot">
+                </div>
+            </div>
+        </section>
 
         <img src="./assets/overlay.png" alt="AppCmd Overlay" class="main-overlay-img">
 
@@ -234,17 +236,7 @@ brew services start appcmd</code-block>
                     <img src="./assets/cycling.png" alt="App Switching" class="screenshot">
                 </div>
             </div>
-        <section class="feature-section"> 
-            <div class="feature-grid"> 
-                <div class="feature-text"> 
-                    <h2>Accessibility Permissions</h2> 
-                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
-                </div> 
-                <div class="feature-image"> 
-                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
-                </div> 
-            </div> 
-        </section>        </section>
+        </section>
 
         <section class="feature-section reverse">
             <div class="feature-grid">
@@ -256,17 +248,7 @@ brew services start appcmd</code-block>
                     <img src="./assets/settings.png" alt="Settings" class="screenshot">
                 </div>
             </div>
-        <section class="feature-section"> 
-            <div class="feature-grid"> 
-                <div class="feature-text"> 
-                    <h2>Accessibility Permissions</h2> 
-                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
-                </div> 
-                <div class="feature-image"> 
-                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
-                </div> 
-            </div> 
-        </section>        </section>
+        </section>
 
         <section class="feature-section">
             <div class="feature-grid">
@@ -278,20 +260,10 @@ brew services start appcmd</code-block>
                     <img src="./assets/cheatsheet.png" alt="Cheat Sheet" class="screenshot">
                 </div>
             </div>
-        <section class="feature-section"> 
-            <div class="feature-grid"> 
-                <div class="feature-text"> 
-                    <h2>Accessibility Permissions</h2> 
-                    <p>AppCmd requires <b>Accessibility</b> and <b>Input Monitoring</b> permissions to detect the Right Command key and manage window switching.</p> 
-                </div> 
-                <div class="feature-image"> 
-                    <img src="./assets/accessibility.png" alt="Accessibility Permissions" class="screenshot"> 
-                </div> 
-            </div> 
-        </section>        </section>
+        </section>
 
         <footer>
-            <p>v1.1.2 • Crafted with ✨ by <a href="https://github.com/clearnote01" style="color: inherit;">Utkarsh Raj</a></p>
+            <p>v1.1.4 • Crafted with ✨ by <a href="https://github.com/clearnote01" style="color: inherit;">Utkarsh Raj</a></p>
             <p style="margin-top: 8px; opacity: 0.6;">Open source under MIT License.</p>
         </footer>
     </div>
@@ -312,4 +284,3 @@ brew services start appcmd</code-block>
     </script>
 </body>
 </html>
-<!-- cache-bust: Thu Feb 19 10:02:29 CET 2026 -->
